--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@types/react-big-calendar": "^1.8.7",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
+    "i18next": "^23.7.11",
+    "moment-timezone": "^0.5.44",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.0.0",
+    "react-intl": "^6.5.5",
     "react-router-dom": "^6.20.1",
+    "rrule": "^2.8.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
