--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/noto-sans-georgian": "^5.0.18",
+    "@hookform/error-message": "^2.0.1",
+    "@mui/lab": "^5.0.0-alpha.159",
+    "@mui/material": "^5.15.3",
     "@types/react-big-calendar": "^1.8.7",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
