--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/noto-sans-georgian": "^5.0.18",
     "@hookform/error-message": "^2.0.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.0.0-rc.1",
     "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.15.3",
