--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/noto-sans-georgian": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.1",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.0.0-rc.1",
-    "@mui/material": "^5.15.3",
     "@types/react-big-calendar": "^1.8.7",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
